# internal/iam/domain/user/dto/response.go
@@ -17,3 +17,7 @@ type UserResponse struct {
 	CreateAt   time.Time      `json:"create_at"`
 	UpdateAt   time.Time      `json:"update_at"`
 }
+
+type UserListResponse struct {
+	Users []UserResponse `json:"users"`
+}
